--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "2.2.4",
   "description": "Image analysis and comparison with HTML5",
   "main": "resemble.js",
+  "scripts": {
+    "test": "mocha -r babel-register tests/node-tests.js",
+    "clean": "rimraf dist/**/*",
+    "prebuild": "npm run clean",
+    "build": "babel src --out-dir dist"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Huddle/Resemble.js.git"
@@ -20,5 +26,18 @@
   "bugs": {
     "url": "https://github.com/Huddle/Resemble.js/issues"
   },
-  "homepage": "https://github.com/Huddle/Resemble.js"
+  "homepage": "https://github.com/Huddle/Resemble.js",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-register": "^6.24.1",
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2",
+    "rimraf": "^2.6.1"
+  },
+  "dependencies": {
+    "canvas": "^1.6.5",
+    "image-type": "^3.0.0"
+  }
 }
